examples/test/testpolicy13630.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13630
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key23: value22
      key31: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value38
          key45: value30
      podSelector:
        matchLabels:
          key32: value42
          key48: value30
